--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,12 +48,12 @@ _custom:
         name: 'Test - unit'
         command: 'bin/robo test'
     step__store_test_results: &step__store_test_results
-        path: 'tests/_output/machine/junit'
+        path: 'reports/machine/unit'
     step__run__codecov: &step__run__codecov
         name: 'Publish the code coverage report on Codecov.io'
         when: 'always'
         command: >
-            [ ! -s tests/_output/machine/coverage/*/coverage.xml ]
+            [ ! -s reports/machine/coverage/coverage.xml ]
             || bash <(curl -s https://codecov.io/bash)
             || true
 
@@ -100,6 +100,11 @@ jobs:
         docker:
             -
                 image: 'circleci/php:7.2'
+    php703__lint_and_test:
+        <<: *job__lint_and_test
+        docker:
+            -
+                image: 'circleci/php:7.3'
 
 workflows:
     version: 2
@@ -109,3 +114,6 @@ workflows:
     php702__lint_and_test:
         jobs:
             - 'php702__lint_and_test'
+    php703__lint_and_test:
+        jobs:
+            - 'php703__lint_and_test'
