--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "ext-json": "*",
+        "phpunit/phpunit": "^8.0",
         "squizlabs/php_codesniffer": "^3.3",
         "sweetchuck/git-hooks": "^0.0",
-        "sweetchuck/robo-git": "^0.0",
-        "sweetchuck/robo-phpcs": "^0.0",
-        "sweetchuck/robo-phpmd": "^0.0"
+        "sweetchuck/robo-git": "^0.2",
+        "sweetchuck/robo-phpcs": "^0.1",
+        "sweetchuck/robo-phpmd": "^0.1"
     },
     "autoload": {
         "psr-4": {
