--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,36 @@
 
 version: 2.1
 
+.env_common: &env_common
+    SHELL: '/bin/bash'
+
+.env_xdebug: &env_xdebug
+    XDEBUG_MODE: 'coverage'
+
 .env_composer: &env_composer
     COMPOSER_NO_INTERACTION: '1'
     COMPOSER_MEMORY_LIMIT: '-1'
     COMPOSER_DISABLE_XDEBUG_WARN: '1'
 
 orbs:
-    codecov: codecov/codecov@1.0.5
+    codecov: 'codecov/codecov@1.2.0'
 
 executors:
+    php800:
+        environment:
+            <<: *env_common
+            <<: *env_xdebug
+            <<: *env_composer
+
+        docker:
+            -
+                name: 'main'
+                image: 'circleci/php:8.0'
+
     php704:
         environment:
+            <<: *env_common
+            <<: *env_xdebug
             <<: *env_composer
 
         docker:
@@ -21,21 +40,14 @@ executors:
 
     php703:
         environment:
+            <<: *env_common
+            <<: *env_xdebug
             <<: *env_composer
 
         docker:
             -
                 name: 'main'
                 image: 'circleci/php:7.3'
-
-    php702:
-        environment:
-            <<: *env_composer
-
-        docker:
-            -
-                name: 'main'
-                image: 'circleci/php:7.2'
 
 commands:
     composer_install:
@@ -45,23 +57,20 @@ commands:
                 restore_cache:
                     name: 'Composer - cache restore'
                     keys:
-                        - 'composer-{{ checksum "./composer.lock" }}-1'
+                        - 'composer-{{ checksum "./composer.lock" }}-2'
 
             -
                 run:
                     name: 'Composer - install'
                     command: >
-                        [[ -d "$(composer config vendor-dir)" ]] || composer install --no-progress
+                        composer install --no-progress
 
             -
                 save_cache:
                     name: 'Composer - cache save'
-                    key: 'composer-{{ checksum "./composer.lock" }}-1'
+                    key: 'composer-{{ checksum "./composer.lock" }}-2'
                     paths:
-                        - './bin/'
-                        - './vendor/'
                         - '~/.composer/cache/'
-
 
     lint:
         description: 'Run linters'
@@ -89,18 +98,25 @@ commands:
 
 jobs:
     build:
-        executor: 'php702'
+        executor: 'php703'
         working_directory: '~/repo'
         steps:
             - 'checkout'
             - 'composer_install'
     lint:
-        executor: 'php702'
+        executor: 'php703'
         working_directory: '~/repo'
         steps:
             - 'checkout'
             - 'composer_install'
             - 'lint'
+    test_php800:
+        executor: 'php800'
+        working_directory: '~/repo'
+        steps:
+            - 'checkout'
+            - 'composer_install'
+            - 'test'
     test_php704:
         executor: 'php704'
         working_directory: '~/repo'
@@ -110,13 +126,6 @@ jobs:
             - 'test'
     test_php703:
         executor: 'php703'
-        working_directory: '~/repo'
-        steps:
-            - 'checkout'
-            - 'composer_install'
-            - 'test'
-    test_php702:
-        executor: 'php702'
         working_directory: '~/repo'
         steps:
             - 'checkout'
@@ -133,14 +142,14 @@ workflows:
                     requires:
                         - build
             -
+                test_php800:
+                    requires:
+                        - build
+            -
                 test_php704:
                     requires:
                         - build
             -
                 test_php703:
-                    requires:
-                        - build
-            -
-                test_php702:
                     requires:
                         - build
