--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,8 @@ version: 2.1
 orbs:
     codecov: 'codecov/codecov@3.0.0'
 
-.env_common: &env_common
+.env_app: &env_app
     SHELL: '/bin/bash'
-
-.env_xdebug: &env_xdebug
-    XDEBUG_MODE: 'coverage'
 
 .env_composer: &env_composer
     COMPOSER_NO_INTERACTION: '1'
@@ -18,31 +15,29 @@ orbs:
 
 executors:
     php_min:
+        resource_class: 'small'
         environment:
-            <<: *env_common
-            <<: *env_xdebug
+            <<: *env_app
             <<: *env_composer
 
         docker:
             -
                 name: 'main'
-                image: 'circleci/php:7.4'
-
+                image: 'cimg/php:7.4'
     php_plus1:
+        resource_class: 'small'
         environment:
-            <<: *env_common
-            <<: *env_xdebug
+            <<: *env_app
             <<: *env_composer
 
         docker:
             -
                 name: 'main'
-                image: 'circleci/php:8.0'
-
+                image: 'cimg/php:8.0'
     php_plus2:
+        resource_class: 'small'
         environment:
-            <<: *env_common
-            <<: *env_xdebug
+            <<: *env_app
             <<: *env_composer
 
         docker:
@@ -50,8 +45,27 @@ executors:
                 name: 'main'
                 image: 'cimg/php:8.1'
 
-
 commands:
+    install_php_extension_pcov:
+        description: 'Install PCOV PHP extension'
+        steps:
+            -
+                run:
+                    name: 'Install PCOV PHP extension - pecl install pcov'
+                    command: |
+                        if php -m | grep pcov ; then
+                            exit 0
+                        fi
+
+                        sudo pecl install pcov
+                        if php -m | grep pcov ; then
+                            exit 0
+                        fi
+
+                        scanDir="$(php -i | grep --color=never --only-matching --perl-regexp '(?<=^Scan this dir for additional \.ini files => ).+')"
+                        echo 'extension=pcov' | sudo tee "${scanDir}/pcov.ini"
+                        php -m | grep pcov
+
     composer_install:
         description: 'Install Composer dependencies with cache restore and save'
         steps:
@@ -65,14 +79,15 @@ commands:
                 run:
                     name: 'Composer - install'
                     command: >
-                        composer install --no-progress
+                        composer install --no-progress --ansi
 
             -
                 save_cache:
                     name: 'Composer - cache save'
                     key: 'composer-{{ checksum "./composer.lock" }}-2'
                     paths:
-                        - '~/.cache/composer'
+                        - '~/.cache/composer/'
+
 
     lint:
         description: 'Run linters'
@@ -81,24 +96,22 @@ commands:
                 run:
                     name: 'Run linters'
                     command: |
-                        "$(composer config bin-dir)/robo" lint
+                        "$(composer config bin-dir)/robo" --ansi lint
 
     test:
         description: 'Run tests'
         steps:
             -
                 run:
-                    name: 'Run unit tests'
+                    name: 'Codeception - unit'
                     command: |
-                          "$(composer config bin-dir)/robo" test
-            -
-                codecov/upload:
+                        "$(composer config bin-dir)/robo" --ansi test unit
+            -   codecov/upload:
                     flags: 'unit'
-                    file: './reports/machine/coverage/coverage.xml'
-            -
-                store_test_results:
+                    file: './tests/_log/machine/coverage/unit/coverage.xml'
+            -   store_test_results:
                     name: 'Store unit test results'
-                    path: './reports/machine/unit'
+                    path: './tests/_log/machine/junit'
 
 jobs:
     build:
@@ -114,25 +127,14 @@ jobs:
             - 'checkout'
             - 'composer_install'
             - 'lint'
-    test_php_min:
-        executor: 'php_min'
-        working_directory: '~/repo'
+    test:
+        parameters:
+            executor:
+                type: 'string'
+        executor: '<<parameters.executor>>'
         steps:
             - 'checkout'
-            - 'composer_install'
-            - 'test'
-    test_php_plus1:
-        executor: 'php_plus1'
-        working_directory: '~/repo'
-        steps:
-            - 'checkout'
-            - 'composer_install'
-            - 'test'
-    test_php_plus2:
-        executor: 'php_plus2'
-        working_directory: '~/repo'
-        steps:
-            - 'checkout'
+            - 'install_php_extension_pcov'
             - 'composer_install'
             - 'test'
 
@@ -146,14 +148,13 @@ workflows:
                     requires:
                         - 'build'
             -
-                test_php_min:
+                test:
+                    name: 'test_<<matrix.executor>>'
                     requires:
                         - 'build'
-            -
-                test_php_plus1:
-                    requires:
-                        - 'build'
-            -
-                test_php_plus2:
-                    requires:
-                        - 'build'
+                    matrix:
+                        parameters:
+                            executor:
+                                - 'php_min'
+                                - 'php_plus1'
+                                - 'php_plus2'
