--- a/.phpstan/parameters.paths.neon
+++ b/.phpstan/parameters.paths.neon
@@ -4,5 +4,5 @@ parameters:
 		- ../tests/
 		- ../RoboFile.php
 	excludePaths:
-		- ../tests/_log/
+		- ../tests/_output/
 		- ../tests/_support/_generated/
