--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -5,7 +5,7 @@ paths:
     tests: 'tests'
     data: 'tests/_data'
     envs: 'tests/_envs'
-    log: 'tests/_log'
+    output: 'tests/_output'
     support: 'tests/_support'
 
 settings:
