--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,37 +23,17 @@ executors:
         docker:
             -
                 name: 'main'
-                image: 'cimg/php:7.4'
-    php_plus1:
-        resource_class: 'small'
-        environment:
-            <<: *env_app
-            <<: *env_composer
-
-        docker:
-            -
-                name: 'main'
-                image: 'cimg/php:8.0'
-    php_plus2:
-        resource_class: 'small'
-        environment:
-            <<: *env_app
-            <<: *env_composer
-
-        docker:
-            -
-                name: 'main'
-                image: 'cimg/php:8.1'
-    php_plus3:
-        resource_class: 'small'
-        environment:
-            <<: *env_app
-            <<: *env_composer
-
-        docker:
-            -
-                name: 'main'
                 image: 'cimg/php:8.2'
+#    php_plus1:
+#        resource_class: 'small'
+#        environment:
+#            <<: *env_app
+#            <<: *env_composer
+#
+#        docker:
+#            -
+#                name: 'main'
+#                image: 'cimg/php:8.3'
 
 commands:
     install_php_extension_pcov:
@@ -118,21 +98,19 @@ commands:
                         "$(composer config bin-dir)/robo" --ansi test unit
             -   codecov/upload:
                     flags: 'unit'
-                    file: './tests/_log/machine/coverage/unit/coverage.xml'
+                    file: './tests/_output/machine/coverage/unit/coverage.xml'
             -   store_test_results:
                     name: 'Store unit test results'
-                    path: './tests/_log/machine/junit'
+                    path: './tests/_output/machine/junit'
 
 jobs:
     build:
         executor: 'php_min'
-        working_directory: '~/repo'
         steps:
             - 'checkout'
             - 'composer_install'
     lint:
         executor: 'php_min'
-        working_directory: '~/repo'
         steps:
             - 'checkout'
             - 'composer_install'
@@ -166,6 +144,4 @@ workflows:
                         parameters:
                             executor:
                                 - 'php_min'
-                                - 'php_plus1'
-                                - 'php_plus2'
-                                - 'php_plus3'
+#                                - 'php_plus1'
