--- a/composer.json
+++ b/composer.json
@@ -15,25 +15,24 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4"
+        "php": ">=8.2"
     },
     "require-dev": {
         "ext-json": "*",
-        "codeception/codeception": "^4.2",
-        "codeception/module-asserts": "^2.0",
-        "consolidation/robo": "^3.0",
-        "nuvoleweb/robo-config": "^2.0",
+        "codeception/codeception": "^5.0",
+        "codeception/module-asserts": "^3.0",
+        "consolidation/robo": "^4.0",
+        "nuvoleweb/robo-config": "^3.0",
         "phpmd/phpmd": "^2.9",
-        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan": "1.11.x-dev",
         "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.3",
         "sweetchuck/git-hooks": "2.x-dev",
-        "sweetchuck/robo-git": "2.x-dev",
-        "sweetchuck/robo-phpcs": "2.x-dev",
-        "sweetchuck/robo-phpmd": "2.x-dev",
-        "sweetchuck/robo-phpstan": "1.x-dev",
-        "sweetchuck/utils": "1.x-dev",
-        "symfony/error-handler": "^5.4"
+        "sweetchuck/robo-git": "3.x-dev",
+        "sweetchuck/robo-phpcs": "3.x-dev",
+        "sweetchuck/robo-phpmd": "3.x-dev",
+        "sweetchuck/robo-phpstan": "2.x-dev",
+        "symfony/error-handler": "^5.4 || ^6.0"
     },
     "autoload": {
         "psr-4": {
